Fix run-on output in day13 notes

--- a/notes/day13-notes.Rmd
+++ b/notes/day13-notes.Rmd
@@ -236,7 +236,8 @@ il_df <- filter(states, region == "illinois")
 Now let's get the accompanying counties:
 
 ```{r il-counties}
-counties <- map_data("county")
+counties <- map_data("county") %>%
+  as_tibble
 il_county <- filter(counties, region == "illinois")
 il_county
 ```
