--- a/submissions/Westley_Dana/Assignment3/Assignment3.Rmd
+++ b/submissions/Westley_Dana/Assignment3/Assignment3.Rmd
@@ -44,8 +44,7 @@ g3 <- ggplot(fertmelt, aes(map_id = Country)) +
 
 print(g3)
 
-#animate
-
+#animate ATTEMPTS
 library(gganimate)
 
 p <- ggplot(fertmelt, aes(map_id = "Country", frame = "Year")) +
@@ -57,20 +56,26 @@ p <- ggplot(fertmelt, aes(map_id = "Country", frame = "Year")) +
   ggthemes::theme_map() +
   coord_map(projection = "mollweide") +
   theme(legend.position = "none")
-gganimate(p)
+#gganimate(p)
 #Error
 
 p1 <- ggplot(fertmelt, aes(Fertility, frame = Year)) + 
   geom_bar()
 
-gganimate(p1)
+#gganimate(p1)
 #Error 
 
 library(gapminder)
 
-gapminder
+theme_set(theme_bw())
+p <- ggplot(gapminder, aes(gdpPercap, lifeExp, size = pop, color = continent, frame = year)) +
+  geom_point() +
+  scale_x_log10()
+#gganimate(p)
+#error
 
-summary(gapminder)
+
+
 #wrap facet
 #g4 <- ggplot(fertmelt, aes(map_id = Country)) +
   #facet_wrap(~ Year) +
@@ -79,7 +84,8 @@ summary(gapminder)
 #TOO MANY TAKES TOO LONG
 
 #plotly
-#library(plotly)
+library(plotly)
+
 #ggploty keeps crashing my R
 
 ```
